css/contact.css
/*Google font import*/
@import url(https://fonts.googleapis.com/css?family=Roboto:300);

/* Custom form import*/
@font-face {
  font-family: HelveticaNeue;
  src: url("fonts/HelveticaNeueLTPro-Th.otf") format("opentype");
  font-weight: lighter;
}

* {
	margin: 0px; 
	padding: 0px; 
	box-sizing: border-box;
}

body, html {
	height: 100%;
	font-family: HelveticaNeuer, sans-serif;
}

/*Header*/
header {
  position: sticky;
  top: 0%;
  z-index: 2;
}

ul {
  height: 3em;
  display: flex;
  justify-content: center;
  font-size: 16px;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.8);
}
li {
  float: left;
  padding: 0 1em 0 1em;
}
li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}
li a:hover {
  text-decoration: none;
  color: #AAA;
}
li a:visited {
  color: white;
  text-decoration: none;
}

a {
	font-family: HelveticaNeue;
	font-size: 14px;
	line-height: 1.7;
	color: #666666;
	margin: 0px;
}

a:focus {
	outline: none !important;
}

a:hover {
	text-decoration: none;
}

h1,h2,h3,h4,h5,h6 {
	margin-bottom: 50px;
}

p {
	font-family: HelveticaNeue;
	font-size: 14px;
	line-height: 1.7;
	color: #666666;
	margin: 0px;
}

ul, li {
	margin: 0px;
	list-style-type: none;
}

input {
	outline: none;
	border: none;
}

textarea {
  outline: none;
  border: none;
}

textarea:focus, input:focus {
  border-color: transparent !important;
}

button {
	outline: none !important;
	border: none;
	background: transparent;
}

button:hover {
	cursor: pointer;
}

iframe {
	border: none !important;
}

/*contact*/
.container {
  width: 100%;  
  min-height: 100vh;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 15px;
  background: #f2f2f2;
  
}

.wrapper {
  width: 1120px;
  background: #fff;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
  flex-direction: row-reverse;

}

/*contact-marker*/
.contact-marker {
  width: 50%;
  background-image: url('../images/contact_us.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  position: relative;
  text-align: justify;
  padding: 30px 15px 0px 15px;
}

.contact-marker::before {
  display: block;
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: rgba(0,0,0,0.8);
}



/*form*/
.contact-form {
  width: 50%;
  display: flex;
  flex-wrap: wrap;
  padding: 56px 55px 63px 55px;
}

.contact-form-title {
  width: 100%;
  display: block;
  font-family: HelveticaNeue;
  font-size: 30px;
  color: #333333;
  line-height: 1.2;
  text-align: center;
  padding-bottom: 33px;
}


/*input*/
.wrap-input {
  width: 100%;
  position: relative;
  border: 1px solid #e6e6e6;
}

.wrapper-input,
.wrapper-input2 {
  width: 50%;
}

.wrapper-input2 {
  border-left: none;
}

.label {
  font-family: HelveticaNeue;
  color: #555555;
  line-height: 1.5;
  letter-spacing: 1px;
  display: flex;
  align-items: center;
  width: 100%;
  min-height: 55px;
  border: 1px solid #e6e6e6;
  border-bottom: none; 
  padding: 10px 25px;
  margin-top: 15px;
  margin-bottom: 0;
}

.text-input {
  display: block;
  width: 100%;
  background: transparent;
  font-family: HelveticaNeue;
  font-size: 18px;
  color: #666666;
  line-height: 1.2;
  padding: 0 25px;
}

input.text-input {
  height: 55px;
}


textarea.text-input {
  min-height: 139px;
  padding-top: 19px;
  padding-bottom: 15px;
}

.input {
  position: absolute;
  display: block;
  width: calc(100% + 2px);
  height: calc(100% + 2px);
  top: -1px;
  left: -1px;
  pointer-events: none;
  border: 1px solid #00ad5f;

  visibility: hidden;
  opacity: 0;
}

.text-input:focus + .input {
  visibility: visible;
  opacity: 1;
}



/*Button*/
.container-contact-form-btn {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-top: 23px;
}

.contact-form-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 20px;
  min-width: 200px;
  height: 50px;
  border-radius: 2px;
  background: #00ad5f;

  font-family: Montserrat-Bold;
  font-size: 12px;
  color: #fff;
  line-height: 1.2;
  text-transform: uppercase;
  letter-spacing: 1px;

}

.contact-form-btn:hover {
  background: #333333;
}

/*Grid*/
.container-music {
  width: 100%;
  display: table;
  border-collapse:separate;
  border-spacing:28px;
}

.grid-row {
  width: 100%;
  display: table;
  table-layout: fixed;
  margin:0 0 -15px 0;
}

#grid-image {
  background:url('../images/map.png');
  background-size: 100% 100%;
  background-position: center;
  background-repeat: no-repeat;
}

.grid_6 {
  display: table-cell;
  background: #fff;
  padding: 2%;
}

.grid_6 h4 ,address{
  font-family:HelveticaNeue;
}

/*Music*/

#music-ipad {
  height: 100%;
  background-image: url("../images/ipad.PNG");
  background-size: 90% 100%;
  background-repeat: no-repeat;
  background-position: center;
}

.grid_12 {
  background:url('../images/imusic.png');
  height: 150px;
  margin-top:30px;
  background-size: 100% 100%;
  background-position: center;
  background-repeat: no-repeat;
}

#beatles-grid {
  background:url('../images/beatles.jpg');
  height: 150px;
  margin-top: 20px;
  background-size: 100% 100%;
  background-position: center;
  background-repeat: no-repeat;
}

#eminem-grid {
  background:url('../images/eminem.jpg');
  height: 150px;
  margin-top: 20px;
  background-size: 100% 100%;
  background-position: center;
  background-repeat: no-repeat;
}

#icicles-grid {
  background:url('../images/icicles.jpg');
  height: 150px;
  margin-top: 20px;
  background-size: 100% 100%;
  background-position: center;
  background-repeat: no-repeat;
}

#encore-grid {
  background:url('../images/encore.jpg');
  height: 150px;
  margin-top: 20px;
  background-size: 100% 100%;
  background-position: center;
  background-repeat: no-repeat;
}

/*Footer*/
.myFooter {
  display: flex;
  flex-flow: row wrap;
}

footer {
  background: #000;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  color: rgb(0, 0, 0);
  position: relative;
  top: 0;
  width: 100%;
  height: 90px;
}

.footer-icons {
  text-align: center;
  font-size: 20px;
  letter-spacing: 5px;
  width: 100%;
  align-items: center;
  justify-content: space-around;
  position: relative;
  margin-top: 15px;
}

.footer-icons a {
  color: white;
}

.footer-bottom {
  text-align: center;
  color: white;
  width: 100%;
  align-items: center;
   justify-content: space-around;
  position: relative;
  margin-top: 10px;
  margin-bottom: 10px;
}

